# NeuralEcho

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  neural_echo.toml  requirements.txt  vcpkg.json
.github/workflows/: ci_linux.yml  ci_macos.yml  ci_windows.yml
apps/qt_dashboard/: app_controller.cpp  app_controller.h  audio_device_manager.cpp  audio_device_manager.h  main.cpp
apps/qt_dashboard/qml/: DashboardPage.qml  ExperimentsPage.qml  Main.qml  MetricsPage.qml  ModelInspectorPage.qml  SpectrogramPage.qml
apps/qt_dashboard/qml/components/: MetricCard.qml  SidebarNav.qml  SpectrumCanvas.qml  StatusBar.qml  ThemeConstants.qml  WaveformPlot.qml
benchmarks/: bench_fft.cpp  bench_nlms.cpp  bench_pipeline.cpp
docs/: ROADMAP.md
dsp/: aec_pipeline.cpp  aec_pipeline.h  audio_frame.h  neural_bridge.cpp  neural_bridge.h
dsp/agc/: agc.cpp  agc.h
dsp/dtd/: double_talk_detector.cpp  double_talk_detector.h
dsp/fft/: fft_engine.cpp  fft_engine.h
dsp/metrics/: metrics_collector.cpp  metrics_collector.h
dsp/nlms/: nlms_filter.cpp  nlms_filter.h
dsp/ree/: residual_echo_estimator.cpp  residual_echo_estimator.h
dsp/vad/: vad.cpp  vad.h
ml/evaluation/: eval_erle.py  eval_pesq_stoi.py
ml/training/: dataset.py  export_onnx.py  losses.py  model.py  train.py
rust/: .clippy.toml  Cargo.toml  rustfmt.toml
rust/neural_echo_buffers/: Cargo.toml
rust/neural_echo_buffers/src/: frame_pool.rs  lib.rs  spsc_ring.rs
rust/neural_echo_config/: Cargo.toml
rust/neural_echo_config/src/: lib.rs  schema.rs
rust/neural_echo_features/: Cargo.toml
rust/neural_echo_features/src/: lib.rs
rust/neural_echo_ffi/: Cargo.toml  build.rs  cbindgen.toml
rust/neural_echo_ffi/include/: neural_echo_ffi.h
rust/neural_echo_ffi/src/: lib.rs
rust/neural_echo_inference/: Cargo.toml
rust/neural_echo_inference/src/: lib.rs  model.rs
rust/neural_echo_runtime/: Cargo.toml
rust/neural_echo_runtime/src/: lib.rs  session.rs
tests/: test_aec_pipeline.cpp  test_dtd.cpp  test_fft_engine.cpp  test_nlms_filter.cpp  test_ree.cpp
tests/integration/: conftest.py  test_cpp_regression.py  test_model_inference.py
